assets/css/index.css
@import url(all.min.css);

.ff-helvetica {
  font-family: Helvetica, sans-serif;
}

.ff-timesNewRoman {
  font-family: "Times New Roman", Times, serif;
}

.fs-2rem {
  font-size: 2rem;
}

.fw-50 {
  font-weight: 50;
}

body {
  background-color: black;
  color: #707070;
  text-align: center;
  font-family: Helvetica, sans-serif;
}

.scrollButton {
  color: dimgray;
  cursor: pointer;
}

nav {
  padding-top: 2rem;
  width: 60%;
}

a,
a > span {
  color: dimgray;
}

a:visited {
  color: steelblue;
}

nav > a:visited {
  color: dimgray;
}

main {
  width: 80%;
  margin: auto;
}

.wire-large {
  border: 2px solid rgb(60, 60, 60);
  top: 15rem;
  left: 20%;
  position: absolute;
  width: 60%;
  height: 15rem;
  margin: auto;
  z-index: -1;
  margin: none;
}

.wire-small {
  border: 2px solid rgb(60, 60, 60);
  border-radius: 80px;
  width: 80px;
  aspect-ratio: 1/1;
  top: 27.5rem;
  left: calc(80% - 40px);
  position: absolute;
  z-index: -1;
  margin: none;
}

.wire-small-halo {
  border: 2px solid dimgray;
  border-radius: 50%;
  width: calc(15px + 5%);
  aspect-ratio: 1/1;
  background-color: black;
  top: calc(27.5rem - 10%);
  left: calc(75% - 10px);
  position: absolute;
  z-index: -2;
  margin: none;
  padding: 5%;
}

.icon > .label {
  display: none;
}

.icon.brands:before {
  font-family: "Font Awesome 5 Brands";
}

.greet {
  font-size: 8rem;
  text-align: left;
  margin-bottom: 10rem;
}

.emphasis {
  font-weight: bolder;
  color: aliceblue;
}

#topSection > p {
  font-size: 2rem;
  letter-spacing: 0.5rem;
}

#topSection,
#skillSection,
#contactSection {
  margin-top: 4rem;
  margin-bottom: 4rem;
}

#topSection {
  margin-bottom: 10rem;
}

.boxContainer {
  width: 60%;
  margin: auto;
  text-align: left;
}

.skillBox {
  margin: 2rem 0 2rem 0;
  border: 2px solid #222;
  color: lightgray;
  border-radius: 1rem;
  padding: 1rem 0 1rem 0;
}

.skillTitle {
  width: fit-content;
  font-weight: 75;
  margin: 2rem;
}

.skillList {
  list-style-type: none;
  padding-left: 0;
  color: gray;
  margin: 2rem;
}

@media (min-width: 1000px) {
  .boxContainer {
    display: flex;
  }

  .boxContainer > .skillBox {
    flex: auto;
    width: 25%;
  }
}

.sectionTitle {
  color: aliceblue;
  font-family: "Times New Roman", Times, serif;
}

.flex {
  display: flex;
  margin: auto;
}

.flex > * {
  flex: auto;
  text-align: center;
}

/* fade-in function */

.fade-in {
  opacity: 0;
  transform: translate3d(0px, 50px, 0px);
  transition: opacity 500ms ease, transform 500ms ease;
}

.fade-in.visible {
  opacity: 1;
  transform: none;
}

#contactSection {
  margin-bottom: 4rem;
  display: flex;
  width: 60%;
}
#toTopNav {
  text-align: center;
  font-size: 2rem;
  padding-top: 0;
  padding-left: 0;
  padding-bottom: 4rem;
  margin-bottom: 4rem;
  position: relative;
  opacity: 0;
  transform: none;
  transition: opacity 1000ms ease, transform 1000ms ease;
  cursor: pointer;
}

#toTopNav.visible {
  opacity: 1;
  transform: none;
}

@media (min-width: 1000px) {
  #contactSection {
    display: inline-flex;
    margin-bottom: 5rem;
  }

  #toTopNav {
    text-align: center;
    font-size: 2rem;
    padding-top: 3.3rem;
    padding-left: 5rem;
    padding-bottom: 0;
    position: absolute;
    opacity: 0;
    transform: translate3d(0, 25px, 0);
    transition: opacity 1000ms ease, transform 1000ms ease;
  }
}

/* 
    use this padding to prevent jittering at the bottom of the screen 
*/

.marginPadding {
  margin-top: 2rem;
}

